[project]
name = "progress-bar-plus"
version = "0.2.0"
description = "A tqdm-style progress bar that plays nice with log files, terminal, and notebooks, even with multiple progress bars, threads, or processes running simultaneously."
readme = "README.md"
authors = [
    { name = "David Stein", email = "davidbstein@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
